<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_belt_conveyor_length"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_conveyor_length"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/hint_belt_conveyor_length"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal5"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/hint_belt_width"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/et_conveyor_length"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_conveyor_length"
        app:layout_constraintTop_toBottomOf="@+id/tv_geometric_belt_length" />

    <EditText
        android:id="@+id/editTextNumberDecimal6"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/hint_load_per_meter"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/et_conveyor_length"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_conveyor_length"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/millimeter"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumberDecimal5"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal5"
        app:layout_constraintTop_toTopOf="@+id/editTextNumberDecimal5"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/tv_conveyor_length"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/calc_belt_conveyor_length"
        app:layout_constraintBottom_toBottomOf="@+id/et_conveyor_length"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/et_conveyor_length" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter"
        app:layout_constraintBottom_toBottomOf="@+id/et_conveyor_length"
        app:layout_constraintStart_toEndOf="@+id/et_conveyor_length"
        app:layout_constraintTop_toTopOf="@+id/et_conveyor_length" />

    <TextView
        android:id="@+id/tv_geometric_belt_length"
        android:layout_width="94dp"
        android:layout_height="19dp"
        android:layout_marginStart="3dp"
        android:hint="@string/hint_geometric_belt_length"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="@+id/et_conveyor_length"
        app:layout_constraintStart_toStartOf="@+id/et_conveyor_length"
        app:layout_constraintTop_toBottomOf="@+id/et_conveyor_length" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter"
        app:layout_constraintBottom_toBottomOf="@+id/tv_geometric_belt_length"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/et_conveyor_length"
        app:layout_constraintTop_toTopOf="@+id/tv_geometric_belt_length" />

    <TextView
        android:id="@+id/tv_geometric_belt_length_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/calc_geometric_belt_length"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="636dp"
        android:onClick="onClickCalculate"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickBack"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>