<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btBeltConveyorCalculation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:onClick="onClickBeltConveyorCalculation"
        android:text="@string/belt_conveyor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hor" />

    <Button
        android:id="@+id/btGearboxSpeedOnOutputShaft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickGearboxSpeedOnOutputShaft"
        android:text="@string/gearbox_speed_on_output_shaft"
        app:layout_constraintEnd_toEndOf="@+id/btBeltConveyorCalculation"
        app:layout_constraintStart_toStartOf="@+id/btBeltConveyorCalculation"
        app:layout_constraintTop_toBottomOf="@+id/btBeltConveyorCalculation" />

    <Button
        android:id="@+id/btDriveDrumCylinder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickDriveDrumCylinder"
        android:text="@string/drive_drum_cylinder"
        app:layout_constraintEnd_toEndOf="@+id/btGearboxSpeedOnOutputShaft"
        app:layout_constraintStart_toStartOf="@+id/btGearboxSpeedOnOutputShaft"
        app:layout_constraintTop_toBottomOf="@+id/btGearboxSpeedOnOutputShaft" />

</androidx.constraintlayout.widget.ConstraintLayout>